# cFS

./: .gitignore  .gitmodules  AGENTS.md  README.md
.sisyphus/archive/esa-extraction/evidence/: F1-compliance-audit.txt  F1-must-not-have.txt  F2-build-test.txt  F2-code-quality.txt  F3-full-qa.txt  F3-scenario-rerun.txt  F4-scope-creep.txt  F4-scope-fidelity.txt  TASK-9-FINAL-STATUS.txt  task-1-directory-structure.txt  task-10-cleanup.txt  task-10-summary.txt  task-11-build.txt  task-11-path-audit.txt  task-11-startup.txt  task-11-tests.txt  task-12-init-order.txt  task-12-no-stepping-build.txt  task-2-cmake-prep.txt  task-2-interface-target.txt  task-3-esa-stub-wiring.txt  task-3-test-migration.txt  task-4-ifdef-audit.txt  task-4-noop-build.txt  task-5-macro-replace.txt  task-5-source-move.txt  task-6-no-psp-refs.txt  task-6-osal-compile.txt  task-7-psp-compile.txt  task-7-psp-module-list.txt  task-8-cfe-compile.txt  task-8-no-psp-refs.txt  task-9-cleanup.txt  task-9-final-verification.txt  task-9-repair-commands.txt  task-9-repair-verification.txt  task-9-sch-compile.txt  task-9-sch-no-psp-refs-final.txt  task-9-sch-no-psp-refs-repair.txt  task-9-sch-no-psp-refs.txt  (+2 more)
.sisyphus/archive/esa-extraction/notepads/: decisions.md  issues.md  problems.md
.sisyphus/archive/esa-extraction/plan/: esa-extraction.md
.sisyphus/archive/esa-stepping-gaps/: CFE_SIM_STEPPING_变更清单.md
.sisyphus/archive/esa-stepping-gaps/evidence/: task-13-final-verification.md  task-13-implementation-summary.md  task-17-no-old-names.txt
.sisyphus/archive/esa-stepping-gaps/evidence/final-qa/: 07-stepping-ctest-tail.txt  08-stepping-test-list.txt  FRESH-F3-VERIFICATION.md  QA-REPORT.md  VERDICT-FRESH-2026-03-23.txt
.sisyphus/archive/esa-stepping-gaps/evidence/plan-compliance-audit/: F1-COMPLIANCE-AUDIT.md  F1-VERDICT.txt
.sisyphus/archive/esa-stepping-gaps/notepads/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/archive/esa-stepping-gaps/plan/: esa-stepping-gaps.md
.sisyphus/archive/esa-stepping-terminal/evidence/: task-1-cmake-build.txt  task-2-error-handling.txt  task-2-uds-symbols.txt  task-3-connect-path.txt  task-3-eof-exit.txt  task-3-help-output.txt  task-3-no-socket-error.txt  task-3-unknown-cmd.txt  task-3-wait-no-arg.txt  task-4-cli-help.txt  task-4-socket-override.txt  task-5-clean-build.txt  task-5-integration-smoke.txt  task-5-readme-check.txt
.sisyphus/archive/esa-stepping-terminal/notepads/: decisions.md  hk_tick_learnings.md  issues.md  learnings.md
.sisyphus/archive/esa-stepping-terminal/plan/: esa-stepping-terminal.md
.sisyphus/archive/linux-global-sim-stepping/drafts/: linux-global-sim-stepping-runbook.md  stepping-architecture-gap-analysis.md
.sisyphus/archive/linux-global-sim-stepping/evidence/: task-t1-default-clean.txt  task-t1-native-gate.txt  task-t10-uds-roundtrip.txt  task-t10-uds-timeout.txt  task-t11-dual-adapter-ready.txt  task-t11-ready-barrier.txt  task-t12-reentry.txt  task-t12-timeout.txt  task-t13-tolab-idle.txt  task-t13-tolab-steps.txt  task-t14-error-tests.txt  task-t14-regression.txt  task-t15-doc-commands.txt  task-t15-doc-triage.txt  task-t1a-cmake-option.txt  task-t1b-osal-gates.txt  task-t1c-psp-gates.txt  task-t1d-time-gates.txt  task-t1e-sch-gates.txt  task-t2-create-app.txt  task-t2-layering.txt  task-t2-noop.txt  task-t3-default-time.txt  task-t3-sim-time.txt  task-t4-delay-control.txt  task-t4-startup.txt  task-t5-esbg-excluded.txt  task-t5-queue-complete.txt  task-t6-complete-order.txt  task-t6-trigger-set.txt  task-t7-core-hk.txt  task-t7-dynamic-only.txt  task-t8-time-children.txt  task-t8-time-waitset.txt  task-t9-inproc-roundtrip.txt  task-t9-single-core.txt
.sisyphus/archive/linux-global-sim-stepping/notepads/: decisions.md  issues.md  learnings.md  test-methods-and-scenarios.md
.sisyphus/archive/linux-global-sim-stepping/plan/: linux-global-sim-stepping.md
.sisyphus/archive/sch-v7-port/evidence/: f3-scope-fidelity.txt  task-9-source-grep.txt
.sisyphus/archive/sch-v7-port/notepads/: decisions.md  issues.md  learnings.md
.sisyphus/archive/sch-v7-port/plans/: sch-v7-port.md
.sisyphus/evidence/: task-10-cleanup.txt  task-10-no-dangling.txt  task-12-init-order.txt  task-12-no-stepping-build.txt  task-17-hook-count.txt
.sisyphus/evidence/final-qa/: 06-stepping-test-sample.txt  99-final-verdict.md  VERDICT.txt
.sisyphus/notepads/esa-extraction/: learnings.md
.sisyphus/notepads/esa-stepping-gaps/: issues.md  learnings.md
.sisyphus/plans/: esa-stepping-gaps.md
apps/: AGENTS.md
apps/fib/: CMakeLists.txt
apps/fib/fsw/platform_inc/: fib_app_msgids.h
apps/fib/fsw/src/: fib_app.c  fib_app.h  fib_app_events.h  fib_app_msg.h
apps/sbn_f_remap/: CMakeLists.txt
apps/sbn_tcp/: CMakeLists.txt
apps/sbn_udp/: CMakeLists.txt
docs/stepping_test/: ESA_设计文档.md  test_method.md  test_results.md
esa/: CMakeLists.txt  README.md
esa/fsw/inc/: cfe_psp_sim_stepping.h  cfe_psp_sim_stepping_core.h  esa_stepping.h  esa_stepping_core.h  esa_wait.h
esa/fsw/src/: cfe_psp_sim_stepping.c  cfe_psp_sim_stepping_core.c  esa_stepping.c  esa_stepping_core.c  esa_wait.c
esa/public_inc/: cfe_psp_sim_stepping_shim.h  esa_stepping_shim.h
esa/ut-coverage/: CMakeLists.txt  coveragetest-core-services.c  coveragetest-esa-wait.c  coveragetest-osal-hooks.c  coveragetest-sim_stepping.c  coveragetest-time-hooks.c  integrationtest-wall-clock-leakage.c
esa/ut-stubs/: CMakeLists.txt
esa/ut-stubs/src/: cfe_psp_sim_stepping_shim_stubs.c  esa_stepping_shim_stubs.c
tools/: AGENTS.md  CMakeLists.txt  sbn_e2e.sh
tools/esa_stepping_terminal/: CMakeLists.txt  README.md
tools/esa_stepping_terminal/src/: main.c  protocol.h  repl.c  repl.h  uds_client.c  uds_client.h
